--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,7 +5,7 @@
 
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-    <name>Demo</name>
+    <name>ZZZDemo</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
     <vendor email="support@yourcompany.com" url="https://www.yourcompany.com">YourCompany</vendor>
@@ -49,6 +49,16 @@
                     popup="true"
             >
             </action>
+
+
+            <action id="com.test.MyActionOpenKeyMapLater"
+                    icon="MyIcons.logo"
+                    text="MyActionOpenKeyMapLater"
+                    class="com.example.demo.actions.MyActionOpenKeyMapLater"
+                    popup="true"
+            >
+            </action>
+
             <add-to-group group-id="EditorPopupMenu3" anchor="last"/>
         </group>
     </actions>
