--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -22,6 +22,8 @@
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.lang</depends>
     <depends optional="true" config-file="java-plugin.xml">com.intellij.java</depends>
+    <depends>org.jetbrains.idea.maven</depends>
+    <depends>org.jetbrains.plugins.terminal</depends>
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
@@ -97,6 +99,13 @@
                     icon="MyIcons.logo"
                     text="检测选中的语言"
                     class="com.example.demo.actions.MyActionDetectSelectLang"
+                    popup="true"
+            >
+            </action>
+            <action id="com.test.ShowMavenPathAction"
+                    icon="MyIcons.logo"
+                    text="查看mavenHome"
+                    class="com.example.demo.actions.ShowMavenPathAction"
                     popup="true"
             >
             </action>
